Usecase 1: Optimize your VMs workload

--- a/manifests/vm.yaml
+++ b/manifests/vm.yaml
@@ -81,8 +81,8 @@ spec:
         - cloudInitNoCloud:             
             userData: |
               #cloud-config
-              user: cloud
-              password: cloud          
+              user: XXXX
+              password: XXXX          
               chpasswd:
                 expire: false
               runcmd: 
